Bug 415161 - "GTK drop-down arrows are misaligned in buttons" [p=twannolycos.nl (Teune van Steeg) r=Ryan a1.9=damons]
UltraBlame original commit: 76cccce342bbc04868120e2e738733a1ab2a6730

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -10275,6 +10275,23 @@ opacity
 6
 ;
 }
+.
+tabs
+-
+alltabs
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+margin
+:
+0px
+;
+}
 /
 *
 Sidebar
